	* Download and install Collect.apk
	* Start Collect
	* Choose your downloaded .collect-mobile file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your .collect-mobile file in the file chooser


Changes
-------

2016-01-28

    * Supports surveys from latest version of Collect Desktop

2015-11-23

    * Prevented data exported when there are records without their key(s) specified
    * Bug fixes related to data export

2015-11-19

    * Bug fixes related to hierarchical code lists and enumerated entities

2015-10-28

    * Bug fixes on navigation interface.

2015-10-29

    * Added a navigation interface. Device GPS and compass are use to navigate to a location specified in sampling design.
    * Minor bug fixes

2015-10-21

    * Improved sorting of sampling unit codes
    * Minor bug fixes

2015-09-25

    * Included support for comma as decimal separators
    * Added dialog displaying code descriptions for a code attribute
    * Improved the code attributes with multiple auto-completion components
    * Updated demo survey
    * Supports latest version of Collect Desktop
    * Minor bug fixes

2015-09-15

    * Taxon attribute displays and searches vernacular names
    * Taxon querying more powerful. E.g. the query "abe es" matches "Abelmoschus esculentus"
    * Added button for clearing current taxon


2015-07-30

    * Added support for latest Collect Desktop version

2015-07-20

    * Fixed the problem where high-resolution images could slow down, or even crash, the app.

2015-06-11

    * From now on, tabs in survey are ignored. Groupings of attributes can still be done through entities.

2015-05-26

    * Added action button for "previous" and a "smart-next"
    * Updated support for default values
    * Minor bug fixes

2015-05-06
