@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    compile('org.openforis.collect:collect-core:3.9.0') {
+    compile('org.openforis.collect:collect-core:3.10.0') {
         exclude group: 'commons-jxpath'
         exclude group: 'org.apache.poi'
     }
